feat: support markdown in content

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -64,6 +64,13 @@
 
         & .body {
 
+          & code {
+            background: rgb(245, 242, 240);
+            padding: 0.25em 0.3em;
+            border-radius: 5px;
+            display: inline;
+          }
+
           & .media, & .link_card {
             border: 1px solid rgba(34, 34, 34, 0.15);
             border-radius: 5px;
