style: remove indentation of descendants

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -38,6 +38,10 @@
         list-style: none;
       }
 
+      .card.descendant {
+        /* TODO: damn, fix the markup maybe */
+        margin-left: calc(-80px - 1em - 5px);
+      }
       .card {
         margin-left: -40px;
         background-color: #fff;
