--- a/templates/threads.html
+++ b/templates/threads.html
@@ -6,8 +6,8 @@
     <title>{{ app.title }}</title>
     <meta name="theme-color" content="#3054bf">
     {% if threads|length == 1 %}
-    <meta name="description" content="{{ threads[0].content }}" />
-    <meta property="og:description" content="{{ threads[0].content }}" />
+    <meta name="description" content="{{ threads[0].content_text }}" />
+    <meta property="og:description" content="{{ threads[0].content_text }}" />
     {% else %}
     <meta name="description" content="{{ app.description  }}" />
     <meta property="og:description" content="{{ app.description }}" />
