--- a/templates/threads.html
+++ b/templates/threads.html
@@ -26,11 +26,8 @@
         color: #232323;
         padding: 5px;
       }
-      header, footer {
+      header, footer, main {
         padding: 1em;
-      }
-      main {
-        padding: 1em 0;
       }
       header, footer {
         background: linear-gradient(45deg, #3054bf, #416fff);
@@ -39,15 +36,6 @@
         & a {
           color: white;
         }
-      }
-
-      main .back {
-          & a {
-            text-decoration: none;
-          }
-          & a::before {
-            content: '\25C0';
-          }
       }
 
       ul {
@@ -97,7 +85,7 @@
             border-radius: 5px;
             box-shadow: 5px 25px 10px -25px rgba(34, 34, 34, 0.15);
             max-width: 100%;
-            margin-bottom: 1em;
+            margin: 15px 0 1em;
             object-fit: cover;
           }
 
@@ -119,13 +107,18 @@
           grid-template-columns: auto auto;
           gap: 5px;
 
-          & .anchor,
-          & .anchor a {
+          & .right_menu {
             padding-top: 5px;
             font-size: small;
             text-align: right;
-            color: #555;
-            vertical-align: center;
+            color: #888;
+
+            & a:hover{
+              color: blue
+            }
+            & a{
+              color: #888;
+            }
           }
 
           & .author a {
@@ -214,10 +207,9 @@
                 <a rel="author" href="{{thread.account.url}}">{{thread.account.display_name | safe}}</a>
               </h3>
 
-              <div class="anchor">
-                <span title="{{ thread.created_at }}">{{ thread.created_at | time_ago }}</span> &middot;
-                <a href="{{ url_for('threads.thread', id=thread['id']) + '#' + thread['id'] }}">anchor</a> &middot;
-                <a href="{{ thread.url }}" target="_blank">&nearr;</a>
+              <div class="right_menu">
+                <a href="{{ thread.url }}" title="{{ thread.created_at }}">{{ thread.created_at | time_ago }}</a> &middot;
+                <a href="{{ url_for('threads.thread', id=thread['id']) + '#' + thread['id'] }}">Anchor</a>
               </div>
             </div>
 
@@ -271,10 +263,9 @@
                       >
                     </h3>
 
-                    <div class="anchor">
-                      <span title="{{ descendant.created_at }}">{{ descendant.created_at | time_ago }}</span> &middot;
-                      <a href="{{ url_for('threads.thread', id=thread['id']) + '#' + descendant['id'] }}">anchor</a>&middot;
-                      <a href="{{ descendant.url }}" target="_blank">&nearr;</a>
+                    <div class="right_menu">
+                      <a href="{{ descendant.url }}" title="{{ descendant.created_at }}">{{ descendant.created_at | time_ago }}</a> &middot;
+                      <a href="{{ url_for('threads.thread', id=thread['id']) + '#' + descendant['id'] }}">Anchor</a>
                     </div>
                   </div>
 
