feat: smooth scrolling

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -19,6 +19,9 @@
 
     <link rel="stylesheet" href="https://webcomponent.io/reset.css" />
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         max-width: 600px;
