style: use system-ui font

--- a/templates/threads.html
+++ b/templates/threads.html
@@ -23,7 +23,7 @@
         scroll-behavior: smooth;
       }
       body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        font-family: system-ui, sans-serif;
         max-width: 600px;
         margin: 0 auto;
         color: #232323;
